vertical slider now correct dimensions hide overflow in question container added questions to show vertical slider and 3 option vertical slider

--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  overflow: hidden;
 }
 
 .tile .question-button.vertical {
@@ -162,6 +163,7 @@ body {
 .tile .answer-slider.vertical {
   width: 100%;
   height: 50%;
+  border-radius: 0px;
 }
 
 .tile .answer-slider.three {
@@ -170,6 +172,7 @@ body {
 
 .tile .answer-slider.vertical.three {
   height: 33%;
+  width: 100%;
 }
 
 .tile .answer-slider.right {
@@ -177,7 +180,7 @@ body {
 }
 
 .tile .answer-slider.right.vertical {
-  margin-top: 12.5%;
+  top: 50%;
   margin-left: 0;
 }
 
@@ -187,9 +190,10 @@ body {
 }
 
 .tile .answer-slider.three-middle.vertical {
-  margin-top: 33%;
+  top: 33%;
   height: 33%;
   margin-left: 0;
+  width: 100%;
 }
 
 .tile .answer-slider.three-far-right {
@@ -198,9 +202,10 @@ body {
 }
 
 .tile .answer-slider.three-far-right.vertical {
-  margin-top: 67%;
+  top: 67%;
   height: 33%;
   margin-left: 0;
+  width: 100%;
 }
 
 .answer-slider {
